Fix double border between divs

--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ h1 {
   text-align: center;
 }
 
+.letters > div:nth-child(n + 2) {
+  border-left: 0;
+}
+
 div {
   font-size: 2rem;
 }
@@ -60,4 +64,5 @@ textarea {
   resize: none;
   outline: none;
   border: 2px solid #000;
+  padding: 0.7rem;
 }
